# hps-analysis

./: .gitignore  CMakeLists.txt  README.md
config/: analysis_config.xml
egs5/: single_e_4pt55.f  single_e_4pt55.inp
include/analyses/: FeeAnalysis.h  FeeDataAnalysis.h  GblTrackAnalysis.h  HpsAnalysis.h  LcioAnalysis.h  MollerAnalysis.h  MollerDataAnalysis.h  MuonAnalysis.h  PairsAnalysis.h  SharedHitAnalysis.h  SimpleTrackingEfficiencyAnalysis.h  TagProbeAnalysis.h  TagProbeDataAnalysis.h  TimingAnalysis.h  TrackAnalysis.h  TrackClusterMatchingEfficiencyAnalysis.h  TridentAnalysis.h  TridentDataAnalysis.h  V0Analysis.h  V0DataAnalysis.h
include/fit/: BumpHunter.h  ChebyshevPoly.h  HpsFitResult.h
include/topology/: Topology.h
include/utils/: AnalysisUtils.h  ComparePlots.h  EcalUtils.h  FlatTupleMaker.h  Plotter.h  RooFitter.h  RootFileReader.h  StrategyType.h  TrackClusterMatcher.h  TrackExtrapolator.h  TrackType.h  TrackUtils.h
python/analysis/: ExtrapolationAnalysis.py  FeeAnalysis.py  TmvaExampleAnalysis.py  TrackExtrapolatorTest.py  TridentAnalysis.py  TridentSelection.py  generate_bump_hunt_plots.py  hps_analysis.py  hpspy.py  make_bh_eval_plots.py  make_moller_plots.py  make_trident_plots.py  tri_selector.py
python/fit/: BumpHuntAnalysis.py  BumpHuntToyAnalysis.py  BumpHunter.py  LogFormatterTex.py  RooFitResult.py  RooFitter.py  bump_hunt_evaluator.py  generate_toys.py
python/hps_learn/: ConfigReader.py  FlatTupleMaker.py  MollerBkgPreprocessor.py  MollerPreprocessor.py  TridentPreprocessor.py  hps_learn.py
python/machine_learning/: ConfigReader.py  config.yml  hps_learn.py
python/notebooks/: bump_hunt_toy_fitter.ipynb  moller_classification.ipynb  radiative_p_sum_optimization.ipynb  radiative_selection.ipynb  radiative_signal_classification.ipynb  toy_fitter.ipynb
python/utils/: AnalysisUtils.py  HpsTrackExtrapolator.py  Plotter.py  TrackClusterMatcher.py  TrackExtrapolator.py  compare_plots.py  smooth_histogram.py
root/: CMakeLists.txt  ExtrapolationAnalysis.C  cluster_charge_analysis.cxx  gbl_analysis.cxx  strategy_analysis.cxx
src/analyses/: CMakeLists.txt  FeeAnalysis.cxx  FeeDataAnalysis.cxx  GblTrackAnalysis.cxx  MollerAnalysis.cxx  MollerDataAnalysis.cxx  MuonAnalysis.cxx  PairsAnalysis.cxx  SharedHitAnalysis.cxx  SimpleTrackingEfficiencyAnalysis.cxx  TagProbeAnalysis.cxx  TagProbeDataAnalysis.cxx  TimingAnalysis.cxx  TrackAnalysis.cxx  TrackClusterMatchingEfficiencyAnalysis.cxx  TridentAnalysis.cxx  TridentDataAnalysis.cxx  V0Analysis.cxx  V0DataAnalysis.cxx
src/analysis/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  hps_analysis.cxx  lcio_analyzer.cxx
src/fit/: BumpHunter.cxx  CMakeLists.txt  ChebyshevPoly.cxx  HpsFitResult.cxx  bump_hunt_evaluator.cxx  chebyshev_fit_example.cxx  set_upper_limits.cxx
src/lcio/: CMakeLists.txt  lcio_analyzer.cxx
src/utils/: AnalysisUtils.cxx  CMakeLists.txt  ComparePlots.cxx  EcalUtils.cxx  FlatTupleMaker.cxx  Plotter.cxx  RooFitter.cxx  RootFileReader.cxx  TrackClusterMatcher.cxx  TrackExtrapolator.cxx  TrackType.cxx  TrackUtils.cxx  compare_plots.cxx  hps_analysis.cxx  print_plot.cxx  print_plots.cxx
